--- a/www/index.html
+++ b/www/index.html
@@ -28,5 +28,6 @@
 	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/controllers/LoginController.js"></script>
 	<script type="text/javascript" src="js/controllers/AccountListController.js"></script>
+	<script type="text/javascript" src="js/controllers/AddAccountController.js"></script>
 </body>
 </html>
