--- a/www/index.html
+++ b/www/index.html
@@ -29,5 +29,6 @@
 	<script type="text/javascript" src="js/controllers/LoginController.js"></script>
 	<script type="text/javascript" src="js/controllers/AccountListController.js"></script>
 	<script type="text/javascript" src="js/controllers/AddAccountController.js"></script>
+	<script type="text/javascript" src="js/directives/PwdEqualityDirective.js"></script>
 </body>
 </html>
