add account in localstorage with encrypted pwd done

--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -28,5 +28,7 @@
 	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/controllers/LoginController.js"></script>
 	<script type="text/javascript" src="js/controllers/AccountListController.js"></script>
+	<script type="text/javascript" src="js/controllers/AddAccountController.js"></script>
+	<script type="text/javascript" src="js/directives/PwdEqualityDirective.js"></script>
 </body>
 </html>
