--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,7 @@
 <script src="lib/angular/angular.min.js"></script>
 <script type="text/javascript" src="lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="lib/angular/angular-route.min.js"></script>
+<script src="lib/aes.js"></script>
 
 <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="css/index.css">
