account detail page added

--- a/www/index.html
+++ b/www/index.html
@@ -31,5 +31,6 @@
 	<script type="text/javascript" src="js/controllers/AccountListController.js"></script>
 	<script type="text/javascript" src="js/controllers/AddAccountController.js"></script>
 	<script type="text/javascript" src="js/directives/PwdEqualityDirective.js"></script>
+	<script type="text/javascript" src="js/controllers/AccountDetailController.js"></script>
 </body>
 </html>
