register page added

--- a/www/index.html
+++ b/www/index.html
@@ -32,5 +32,6 @@
 	<script type="text/javascript" src="js/controllers/AddAccountController.js"></script>
 	<script type="text/javascript" src="js/directives/PwdEqualityDirective.js"></script>
 	<script type="text/javascript" src="js/controllers/AccountDetailController.js"></script>
+	<script type="text/javascript" src="js/controllers/RegisterController.js"></script>
 </body>
 </html>
